--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Rätsel #4: Das Einhorn</title>
+  <link rel="icon" type="image/x-icon" href="einhorn.png">
   <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
