--- a/index.html
+++ b/index.html
@@ -26,13 +26,17 @@
           </div>
         
           <div class="content" id="seite3" style="display:none;">
-            <h2>Aufgabe: MAC-Adresse</h2>
-            <p>Finde die MAC-Adresse heraus.</p>
+            <h2>[184 : 39 : 235 : 211 : 34 : 44]</h2>
+            <p>
+              Gegeben sind Dezimalzahlen, die die MAC-Adresse abbilden.
+              Übersetze die Dezimalzahlen zu Hexadezimalzahlen, damit der Einhorn dir den Code zur Weiterreise gibt.
+            </p>
             <button class="pixel-button" onclick="zeigeSeite(2)">Zurück</button>
             <button class="pixel-button" onclick="zeigeSeite(4)">Weiter</button>
           </div>
 
           <div class="content" id="seite4" style="display:none;">
+            <h2>[184 : 39 : 235 : 211 : 34 : 44]</h2>
             <p>Gebe die MAC-Adresse ein:</p>
 
             <div class="otp-container">
@@ -62,6 +66,10 @@
               Weiter
             </button>
             <p id="feedback" class="feedback"></p>
+
+            <a href="https://doepfer.de/seq/hexdez.html" target="_blank" class="pixel-button">
+              Zur Konversionstabelle
+            </a>
           </div>
 
           <div class="content" id="seite5" style="display:none;">
